<resources>
    <string name="app_name">NGPrintTag</string>
    <string name="app_tag_print">Tag Printing</string>
    <string name="a_btn_retry">Retry</string>
    <string name="a_btn_ok">OK</string>
    <string name="a_btn_cancel">Cancel</string>
    <string name="a_lbl_warning_title">Warning</string>
    <string name="a_lbl_network_error">Network Error</string>
    <string name="a_btn_no">No</string>
    <string name="a_btn_yes">Yes</string>
    <string name="a_msg_server_error">There is some server error. Please try again later.</string>
    <string name="a_msg_time_out_error">The request timed out</string>
    <string name="a_lbl_net_title">Network</string>
    <string name="a_lbl_sign_back_in">Sign Back In</string>
    <string name="a_lbl_session_timeout">This session has timed out</string>
    <string name="a_hint_price_effective_date">PRICE EFFECTIVE DATE</string>
    <string name="a_hint_tag_type">TAG TYPE</string>
    <string name="a_btn_select_template">Select Template</string>
    <string name="a_title_dashboard">Dashboard</string>
    <string name="a_lbl_new_print_request">New Print Request</string>
    <string name="a_lbl_pending_requests">Pending Requests</string>
    <string name="a_lbl_all_requests">All Requests</string>
    <string name="a_title_select_tag_type">Select Tag Type</string>
    <string name="a_lbl_fresh_tag">Fresh Tag</string>
    <string name="a_lbl_inventory_tag">Inventory Tag</string>
    <string name="a_title_template">Template</string>
    <string name="a_lbl_store_no">STORE NO.</string>
    <string name="a_lbl_department">DEPARTMENT</string>
    <string name="a_btn_continue">Continue</string>
    <string name="a_title_select_department">Select Department</string>
    <string name="a_title_select_store_no">Select Store No.</string>
    <string name="a_btn_done">Done</string>
    <string name="a_lbl_cutoff_day">Cutoff Day</string>
    <string name="a_lbl_delivery_day">Delivery Day</string>
    <string name="a_lbl_max_quantity">Max Quantity</string>
    <string name="a_lbl_effective_date">Effective Date</string>
    <string name="a_lbl_enter_product_info">Enter Product Aisle Information</string>
    <string name="a_btn_next">Next</string>
    <string name="a_lbl_no_product_added">No Product Added</string>
    <string name="a_lbl_start_adding_product">You can start adding your products to print tag</string>
    <string name="a_btn_add">Add</string>
    <string name="a_lbl_upc">UPC</string>
    <string name="a_lbl_quantity">Quantity</string>
    <string name="a_lbl_min">min</string>
    <string name="a_lbl_max">max</string>
    <string name="a_lbl_upc_number">UPC Number</string>
    <string name="a_btn_submit">Submit</string>
    <string name="a_btn_draft">Draft</string>
    <string name="a_btn_print_now">Print Now</string>
    <string name="a_lbl_print_type">Print Type</string>
    <string name="a_lbl_template_name">Template Name</string>
    <string name="a_lbl_req_date">Req Date</string>
    <string name="a_lbl_expected_date">Expected Date</string>
    <string name="a_lbl_completed">Completed</string>
    <string name="a_lbl_pending">Pending</string>
    <string name="a_menu_select_language">Select Language</string>
    <string name="a_menu_logout">Logout</string>
    <string name="a_hint_password">PASSWORD</string>
    <string name="a_hint_username">USER NAME</string>
    <string name="a_btn_login">Login</string>
    <string name="a_lbl_sign_out_message">Are you sure you want to Logout from this application?</string>
    <string name="a_lbl_information">Information</string>
    <string name="a_lbl_error_username_required">Username is required</string>
    <string name="a_lbl_error_incorrect_password">Incorrect password</string>
    <string name="a_lbl_error_select_tag_type">Please select tag type</string>
    <string name="a_lbl_error_store_number_required">Store no. is required</string>
    <string name="a_lbl_error_select_template">Please select template</string>
    <string name="a_lbl_error_upc_digit">UPC must be 13 digit number</string>
    <string name="a_lbl_scanning">Scanning…</string>
    <string name="a_lbl_error_occured">An error has occurred.</string>
    <string name="a_lbl_error_scanning">Failed to get the specified scanner device! Please close and restart the
        application.
    </string>
    <string name="a_lbl_error_failed_to_initialize">Failed to initialize the scanner device.</string>
    <string name="a_lbl_error_upc_required">UPC is required</string>
    <string name="a_menu_change_language">Change Language</string>
    <string name="a_app_menu_english">English</string>
    <string name="a_app_menu_spanish">Español</string>
    <string name="a_lbl_exit_message">Are you sure you want to exit from this application?</string>
    <string name="a_title_sign_in">Sign In</string>
    <string name="a_lbl_server_title">Error</string>
    <string name="a_lbl_unknown">Unknown</string>


    <!--Need to translate-->

    <string name="a_lbl_printing_day">Printing Day</string>
    <string name="a_lbl_product_info">ENTER PRODUCT AISLE INFORMATION</string>
    <string name="title_tab_start_date">Start Date</string>
    <string name="ttile_tab_end_date">End Date</string>
    <string name="a_hint_search">Search</string>
    <string name="a_msg_loggedout">Logged out successfully!</string>
    <string name="a_msg_product_added">Product Addded Successfully</string>


    <!-- Update -->
    <string name="a_net_message">Internet connection is not available. Please try again!</string>
    <string name="item_freshtag">Fresh Tag</string>
    <string name="item_inventorytag">Inventory Tag</string>
    <string name="a_lbl_desk">-</string>
    <string name="a_msg_emdk">EMDK closed unexpectedly! Please close and restart the application</string>
    <string name="a_msg_scanning">Scanning…</string>
    <string name="a_msg_scanner_waiting">Scanner is waiting for trigger press…</string>
    <string name="a_msg_error">An error has occurred</string>
    <string name="a_msg_idle">is enabled and idle…</string>
    <string name="a_msg_disable">is disabled.</string>
    <string name="a_msg_delete">Are you sure you want to delete?</string>
    <string name="a_lbl_description">DESCRIPTION</string>
    <string name="a_msg_product_added_draft">Product added to draft</string>
    <string name="a_msg_tag_type">Please select tag type</string>
    <string name="a_msg_store">Please select store</string>
    <string name="a_msg_upc_exists">UPC number already exist</string>
    <string name="a_msg_quantity">Cannot enter value greater than %1$s</string>
    <string name="a_lbl_print_request">Print Request</string>
    <string name="a_msg_barcode_not_found">Barcode not found</string>


</resources>
