<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <data>

        <variable
                name="layoutManager"
                type="androidx.recyclerview.widget.GridLayoutManager"/>
    </data>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/margin_20"
                android:paddingEnd="@dimen/margin_20"
                android:background="@color/app_background">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
            >

        <com.ng.printtag.apputils.custom.CollapsedHintTextInputLayout
                android:id="@+id/inputDate"
                style="@style/AppEditText.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:hint="@string/a_hint_price_effective_date"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_effective_date"
                    android:layout_width="match_parent"
                    style="@style/AppEditText.EditText"
                    android:imeOptions="actionNext"
                    android:focusable="false"
                    android:layout_height="wrap_content"
            >
            </com.google.android.material.textfield.TextInputEditText>
        </com.ng.printtag.apputils.custom.CollapsedHintTextInputLayout>

        <com.ng.printtag.apputils.custom.CollapsedHintTextInputLayout
                android:id="@+id/inputTag"
                style="@style/AppEditText.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_hint_tag_type"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_tag_type"
                    android:layout_width="match_parent"
                    style="@style/AppEditText.EditText"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:drawablePadding="@dimen/margin_10"
                    android:drawableEnd="@mipmap/ic_dropdown_arrow"
            >
            </com.google.android.material.textfield.TextInputEditText>
        </com.ng.printtag.apputils.custom.CollapsedHintTextInputLayout>

        <com.ng.printtag.apputils.custom.CollapsedHintTextInputLayout
                android:id="@+id/inputStoreNo"
                style="@style/AppEditText.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_lbl_store_no"

        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_store_no"
                    android:layout_width="match_parent"
                    style="@style/AppEditText.EditText"
                    android:imeOptions="actionNext"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:drawablePadding="@dimen/margin_10"
                    android:drawableEnd="@mipmap/ic_dropdown_arrow"
            >
            </com.google.android.material.textfield.TextInputEditText>
        </com.ng.printtag.apputils.custom.CollapsedHintTextInputLayout>


        <com.ng.printtag.apputils.custom.CollapsedHintTextInputLayout
                android:id="@+id/inputDepartment"
                style="@style/AppEditText.Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/a_lbl_department"

        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_department"
                    android:layout_width="match_parent"
                    style="@style/AppEditText.EditText"
                    android:imeOptions="actionDone"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:drawableEnd="@mipmap/ic_dropdown_arrow"
                    android:drawablePadding="@dimen/margin_10"
            >
            </com.google.android.material.textfield.TextInputEditText>
        </com.ng.printtag.apputils.custom.CollapsedHintTextInputLayout>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_templateList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        app:layoutManager="@{layoutManager}"
                        android:layout_marginTop="@dimen/margin_10"/>

                <View
                        android:layout_marginTop="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:layout_height="@dimen/margin_1"
                        android:layout_width="match_parent"
                        android:background="@color/color_CDE0EC"/>
            </LinearLayout>


            <!--
                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="@dimen/margin_20">


                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnSubmit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/AppButton.Colored"
                                android:layout_gravity="end"
                                android:text="@string/a_btn_next"
                                android:padding="@dimen/margin_10"
                                android:layout_alignParentEnd="true" tools:ignore="RelativeOverlap"/>
                    </RelativeLayout>
            -->

    </LinearLayout>
    </ScrollView>

</layout>